# music_recog

./: .gitignore  pyproject.toml
music_recog/: database.py  server.py
music_recog/static/: index.html  script.js
